--- a/spang2/package.json
+++ b/spang2/package.json
@@ -7,11 +7,12 @@
   "version": "0.0.1",
   "description": "Javascript Implementation of SPANG",
   "dependencies": {
-    "fs": "0.0.1-security",
-    "sparqljs": "^3.0.0",
     "commander": "^2.16.0",
+    "fs": "0.0.1-security",
+    "mustache": "4.0.0",
     "request": "^2.85.0",
-    "mustache": "4.0.0"
+    "sparqljs": "^3.0.0",
+    "sync-request": "^6.1.0"
   },
   "devDependencies": {
     "chai": "^4.1.2",
