--- a/spang2/package.json
+++ b/spang2/package.json
@@ -19,7 +19,8 @@
     "chai": "^4.1.2",
     "chai-fs": "^2.0.0",
     "mocha": "^5.2.0",
-    "browserify": "^16.5.0"
+    "browserify": "^16.5.0",
+    "pegjs": "^0.10.0"
   },
   "bin": {
     "spang2": "./src/spang2.js"
