--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "diff": false
   },
   "scripts": {
-    "test": "./node_modules/mocha/bin/mocha"
+    "test": "./node_modules/mocha/bin/mocha",
+    "pegjs": "./node_modules/pegjs/bin/pegjs -o lib/parser.js syntax/spang.pegjs"
   }
 }
