Update package.json and README.md for scripts

--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "diff": false
   },
   "scripts": {
-    "test": "./node_modules/mocha/bin/mocha",
-    "pegjs": "./node_modules/pegjs/bin/pegjs -o lib/parser.js syntax/spang.pegjs"
+    "test": "mocha",
+    "pegjs": "pegjs -o lib/parser.js syntax/spang.pegjs",
+    "browserify": "browserify lib/spang_browser.js > lib/spang_bundled.js && browserify lib/spfmt_browser.js > lib/spfmt_bundled.js" 
   }
 }
