--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "description": "JavaScript implementation of SPANG",
   "dependencies": {
     "commander": "^5.1.0",
-    "convert-array-to-csv": "^2.0.0",
+    "csv-write-stream": "^2.0.0",
     "expand-home-dir": "0.0.3",
     "fs": "0.0.1-security",
     "ls": "^0.2.1",
