--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "chai-fs": "^2.0.0",
     "mocha": "^7.1.2",
     "pegjs": "^0.10.0",
+    "prettier": "^2.2.1",
     "terser": "^5.0.0"
   },
   "bin": {
