add cypher to package.json

--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
   "bin": {
     "spang2": "./bin/spang.js",
     "iri": "./bin/iri.js",
-    "spfmt": "./bin/spfmt.js"
+    "spfmt": "./bin/spfmt.js",
+    "cypher": "./bin/cypher.js"
   },
   "mocha": {
     "timeout": 15000,
