--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "csv-write-stream": "^2.0.0",
     "expand-home-dir": "0.0.3",
     "fs": "0.0.1-security",
+    "http-status-codes": "^2.1.4",
     "ls": "^0.2.1",
     "mustache": "4.0.0",
     "request": "^2.85.0",
