--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
   },
   "scripts": {
     "test": "mocha test/index.js",
-    "test-dev": "mocha test/index_dev.js",
+    "test-all": "mocha test/index_all.js",
     "pegjs": "pegjs -o syntax/parser.js syntax/spang.pegjs",
     "browserify": "browserify js/spang_browser.js > js/spang_bundled.js && browserify js/spfmt_browser.js > js/spfmt_bundled.js && terser js/spang_bundled.js > js/spang_bundled.min.js",
     "prettier": "prettier --single-quote --trailing-comma none --print-width 180"
