--- a/package.json
+++ b/package.json
@@ -1,5 +1,10 @@
 {
   "name": "spang",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/dbcls/spang"
+  },
+  "license": "MIT",
   "engines": {
     "node": ">=12.0.0",
     "npm": ">=6.0.0"
