Fix url of repository

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "spang",
   "repository": {
     "type": "git",
-    "url": "https://github.com/dbcls/spang"
+    "url": "https://github.com/hchiba1/spang"
   },
   "license": "MIT",
   "engines": {
