--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "expand-home-dir": "0.0.3",
     "fs": "0.0.1-security",
     "http-status-codes": "^2.1.4",
+    "json5": "^2.2.1",
     "ls": "^0.2.1",
     "mustache": "4.0.0",
     "request": "^2.85.0",
