--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "npm": ">=6.0.0"
   },
   "dependencies": {
+    "axios": "^0.27.2",
     "columnify": "^1.5.4",
     "commander": "^7.1.0",
     "csv-parse": "^4.14.0",
