--- a/package.json
+++ b/package.json
@@ -1,12 +1,15 @@
 {
   "name": "spang",
   "version": "2.5.1",
-  "description": "JavaScript implementation of SPANG",
+  "description": "SPARQL client for parameterized queries",
   "repository": {
     "type": "git",
     "url": "https://github.com/hchiba1/spang"
   },
   "license": "MIT",
+  "keywords": [
+    "sparql"
+  ],
   "engines": {
     "node": ">=14.0.0",
     "npm": ">=6.0.0"
