Move parser.js into lib/

--- a/package.json
+++ b/package.json
@@ -52,7 +52,7 @@
   "scripts": {
     "test": "mocha test/index.js",
     "test-all": "mocha test/index_all.js",
-    "pegjs": "pegjs -o syntax/parser.js syntax/spang.pegjs",
+    "pegjs": "pegjs -o lib/parser.js lib/spang.pegjs",
     "browserify": "browserify js/_spang.js > js/spang.js && browserify js/_spfmt.js > js/spfmt.js",
     "prettier": "prettier --single-quote --trailing-comma none --print-width 180"
   }
