--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
   "scripts": {
     "test": "mocha test/index.js",
     "test-all": "mocha test/index_all.js",
-    "pegjs": "pegjs -o lib/parser.js lib/spang.pegjs",
+    "peggy": "peggy -o lib/parser.js lib/spang.pegjs",
     "browserify": "browserify js/_spang.js > js/spang.js",
     "prettier": "prettier --single-quote --trailing-comma none --print-width 180"
   },
@@ -53,7 +53,7 @@
     "chai": "^4.1.2",
     "chai-fs": "^2.0.0",
     "mocha": "^10.2.0",
-    "pegjs": "^0.10.0",
+    "peggy": "^3.0.2",
     "prettier": "^2.2.1",
     "terser": "^5.7.1"
   }
